show more changes

--- a/BookStore/src/app/book-detail/book-detail.component.html
+++ b/BookStore/src/app/book-detail/book-detail.component.html
@@ -1,5 +1,5 @@
 <div class="selectedBook">
-    <p><img class="custom-image-style" src="{{selectedBook.image}}" height="150" width="150" style="display: block;"></p>
+    <p><img class="custom-image-style" src="{{selectedBook.image}}" style="display: block;"></p>
     <div>
         <p><strong>{{selectedBook.title}}</strong></p>
         <p><span>Book Price: </span>{{selectedBook.price}}</p>
