--- a/BookStore/src/app/home/home.component.html
+++ b/BookStore/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="bookContainer row">
-    <div *ngFor="let book of books;let i=index" [routerLink] = "['/home/',book.id]">
+    <div *ngFor="let book of books | slice:0:show;let i=index" [routerLink] = "['/home/',book.id]">
         <div class="card card-block">
            <img class="custom-image-style" src="{{book.image}}" height="100" width="100" style="display: block;">
             <div class="book-desc-container">
@@ -12,7 +12,7 @@
                         [disabled]="book.purchased===true">Buy Now</button>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
+<button *ngIf="show < books.length" (click)="increaseShow()" class="show">Show More</button>
